code/examples/parsing/fail/13-wrong-player-starts.gridlock
GRIDLOCK
Players: Amy, Bill.
Grid: 3x3.
Colours: red, green.

Bill plays red at (0,0).
Amy plays red at (2,0).
Bill plays green at (1,1).
Amy plays red at (0,2).
Bill plays red at (2,2).
Amy cannot move.
Bill wins!